gateway-api/HTTPS/whoami-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-http
  namespace: gateway-api-ns
spec:
  parentRefs:
    - name: traefik
      sectionName: web
      kind: Gateway

  hostnames:
    - tls.shixiaochuang.org

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
